--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 div {
   border: solid 2px black;
 }
 
 .pageContainer {
   display: grid;
-  grid: 1fr 4fr / 1fr 4fr;
-  box-sizing: border-box;
+  grid: 1fr 4fr / 1.2fr 4fr;
   height: 100vh;
   width: 100vw;
 }
@@ -16,4 +21,36 @@ div {
 
 .sidebar {
   grid-row: 1 / 3;
+  padding: 10px 10px ;
+  height: 55%;
+  font-size: 20px;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 12px;
+  align-items: center;
+  justify-items: center;
+}
+
+.sidebar>img~img {
+  height:25px;
+}
+
+.dash {
+  font-size: 24px;
+}
+
+img.dash {
+  height: 40px;
+}
+
+.sidebar span {
+  justify-self: left;
+}
+
+.home {
+  margin-top: 30px;
+}
+
+.communities {
+  margin-bottom: 50px;
 }
