--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 }
 
 div {
-  border: solid 2px black;
+  border: solid 2px red;
 }
 
 .pageContainer {
   display: grid;
-  grid: 1fr 4fr / 1.2fr 4fr;
+  grid: 1fr 4fr / minmax(200px, 1fr) 4fr;
   height: 100vh;
   width: 100vw;
 }
@@ -21,36 +21,40 @@ div {
 
 .sidebar {
   grid-row: 1 / 3;
-  padding: 10px 10px ;
-  height: 55%;
-  font-size: 20px;
-  display: grid;
-  grid-template-columns: 1fr 4fr;
-  gap: 12px;
-  align-items: center;
-  justify-items: center;
 }
 
-.sidebar>img~img {
-  height:25px;
+.sidebar>.container {
+  display: grid;
+  gap: 40px;
+  padding: 15px;
+}
+
+ul {
+  display: grid;
+  gap: 10px;
+}
+
+.dash, li {
+  border: solid 2px yellow ;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  gap: 10px;
+  align-items: center;
+}
+
+img {
+  width: clamp(1rem, 2.5vw, 2rem);
+  height: auto;
 }
 
 .dash {
-  font-size: 24px;
+  position: relative;
+  padding-left: 35px;
 }
 
-img.dash {
-  height: 40px;
-}
-
-.sidebar span {
-  justify-self: left;
-}
-
-.home {
-  margin-top: 30px;
-}
-
-.communities {
-  margin-bottom: 50px;
+.dash>img {
+  min-width: 25%;
+  height: auto;
+  position: absolute;
+  left: -10px;
 }
