--- a/style.css
+++ b/style.css
@@ -11,8 +11,6 @@ div {
 .pageContainer {
   display: grid;
   grid: 150px 1fr / minmax(200px, 1fr) 4fr;
-  height: 100vh;
-  width: 100vw;
 }
 
 .main {
@@ -42,7 +40,7 @@ ul {
   align-items: center;
 }
 
-img {
+.sidebar img {
   width: clamp(1rem, 2.5vw, 2rem);
   height: auto;
 }
@@ -89,40 +87,36 @@ img {
   min-width: 200px;
 }
 
-.container>.search+img, img[src='bell.svg'] {
+.search+img, img[src='bell.svg'] {
   height: 20px;
 }
 
-.container.profile {
+.notification.container {
   display: grid;
-  justify-content: center;
-  gap: 20px;
-}
-
-.profilePic {
-  border-radius: 20px;
+  justify-content: end;
+  gap: 10px;
+  text-wrap: nowrap;
+  padding-right: 30px;
 }
 
 .row.one .profilePic {
-  height: 40px;
-  width: 40px;
+  height: 50px;
 }
 
 .row.two {
   display: grid;
   grid-template-columns: 50px 1fr 1fr;
-  gap: 20px;
+  gap: 15px;
 }
 
 .row.two .profilePic {
-  height: 50px;
-  width: 50px;
+  height: 60px;
 }
 
 .row.two .welcome {
   display: grid;
   gap: 8px;
-  font-size: clamp(0.9rem, 1.25rem, 1.5rem);
+  text-wrap: nowrap;
 }
 
 .row.two .buttons {
@@ -136,4 +130,73 @@ button {
   padding: 8px;
   border-radius: 20px;
   text-align: center;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  margin: 20px 25px 20px 10px;
+  gap: 10px;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(10rem, 30%));
+  gap: 15px;
+  margin: 10px 0;
+}
+
+.card {
+  display: grid;
+  grid: 150px 20px / 50px;
+  padding: 15px 10px;
+}
+
+.text {
+  grid-column: 1 / 3;
+}
+
+.controls {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row: 2;
+  grid-column: 2;
+  align-content: center;
+  justify-items: end;
+}
+
+.controls img {
+  height: 20px;
+  border: solid 2px blue;
+}
+
+.announcements, .trending {
+  margin: 10px;
+  padding: 20px;
+}
+
+.announcements {
+  display: grid;
+  gap: 10px;
+}
+
+.trending {
+  display: grid;
+  gap: 10px;
+  border-bottom: solid 1 px gray;
+}
+
+.profile {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+.profile>img {
+  height: 40px;
+  align-self: center;
+  justify-self: center;
+}
+
+.handleContainer {
+  display: grid;
 }
