--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
+:root {
+  --main-blue-color: #0891b2;
+  --box-shadow: #bbb 2px 2px 6px;
+  --card-color: #22d3ee;
+  --card-radius: 10px;
+  --grayed-text: #777;
+}
+
 * {
   margin: 0;
   padding: 0;
+  appearance: none;
   box-sizing: border-box;
-}
-
-div {
-  border: solid 2px red;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .pageContainer {
   display: grid;
-  grid: 150px 1fr / minmax(200px, 1fr) 4fr;
+  grid: 150px 1fr / minmax(200px, 1fr) 5fr;
 }
 
 .main {
@@ -19,47 +25,47 @@ div {
 
 .sidebar {
   grid-row: 1 / 3;
-}
-
-.sidebar>.container {
   display: grid;
+  grid-template-columns: 170px;
+  align-content: start;
   gap: 40px;
-  padding: 25px 15px;
+  padding: 25px 20px;
+  color: #ffffff;
+  background-color: var(--main-blue-color);
+  font-weight: bold;
 }
 
-ul {
+.sidebar ul {
   display: grid;
-  gap: 10px;
+  grid-template-columns: 170px;
+  gap: 15px;
+  list-style: none;
 }
 
-.dash, li {
-  border: solid 2px yellow ;
+.sidebar li {
   display: grid;
-  grid-template-columns: 1fr 5fr;
-  gap: 10px;
+  grid-template-columns: 1fr 500px;
+  gap: 20px;
   align-items: center;
 }
 
 .sidebar img {
-  width: clamp(1rem, 2.5vw, 2rem);
-  height: auto;
+  width: 25px;
+  filter: invert();
 }
 
 .dash {
-  position: relative;
-  padding-left: 52.5px;
+  font-size: 20px;
 }
 
-.dash>img {
-  min-width: 20%;
-  height: auto;
-  position: absolute;
-  left: -10px;
-}
+
 
 .header {
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 2fr;
+  box-shadow: var(--box-shadow);
+  font-weight: bold;
+  padding: 10px 0 20px;
 }
 
 .row {
@@ -117,6 +123,11 @@ ul {
   display: grid;
   gap: 8px;
   text-wrap: nowrap;
+  font-size: 20px;
+}
+
+.hi {
+  font-size: 12px;
 }
 
 .row.two .buttons {
@@ -128,28 +139,37 @@ ul {
 button {
   width: 75px;
   padding: 8px;
+  border: none;
   border-radius: 20px;
   text-align: center;
+  font-weight: bold;
+  background-color: var(--main-blue-color);
+  color: #ffffff;
 }
 
 .main {
   display: grid;
-  grid-template-columns: 3fr 1fr;
-  margin: 20px 25px 20px 10px;
-  gap: 10px;
+  grid-template-columns: 1fr 250px;
+  margin: 0 25px 20px 10px;
 }
+
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(10rem, 30%));
-  gap: 15px;
+  grid-template-columns: repeat(auto-fill, minmax(18rem, 40%));
+  gap: 20px;
   margin: 10px 0;
+  
 }
 
 .card {
   display: grid;
-  grid: 150px 20px / 50px;
+  grid: 100px 20px / 150px;
+  gap: 10px;
   padding: 15px 10px;
+  box-shadow: var(--box-shadow);
+  border-radius: var(--card-radius);
+  border-left: solid 6px var(--card-color);
 }
 
 .text {
@@ -167,28 +187,40 @@ button {
 
 .controls img {
   height: 20px;
-  border: solid 2px blue;
 }
 
 .announcements, .trending {
-  margin: 10px;
+  margin: 10px 0;
   padding: 20px;
-}
-
-.announcements {
   display: grid;
   gap: 10px;
+  box-shadow: var(--box-shadow);
+  border-radius: var(--card-radius);
+}
+
+.announcements p {
+  font-size: 12px;
+}
+
+.announcements>.container:nth-child(even) {
+  border-top: solid 1px var(--grayed-text);
+  border-bottom: solid 1px var(--grayed-text);
+  padding: 10px 0;
 }
 
 .trending {
-  display: grid;
   gap: 10px;
-  border-bottom: solid 1 px gray;
+  padding: 20px 0;
+}
+
+h3 {
+  margin-top: 20px;
 }
 
 .profile {
   display: grid;
   grid-template-columns: 1fr 3fr;
+
 }
 
 .profile>img {
@@ -199,4 +231,20 @@ button {
 
 .handleContainer {
   display: grid;
+  font-size: 12px;
+}
+
+p {
+  font-size: 14px;
+  color: var(--grayed-text);
+  padding: 5px 0;
+}
+
+.title {
+  color: var(--grayed-text);
+
+}
+
+h6 {
+  font-size: 13px;
 }
