--- a/style.css
+++ b/style.css
@@ -149,14 +149,14 @@ button {
 
 .main {
   display: grid;
-  grid-template-columns: 1fr 250px;
+  grid-template-columns: 1fr 0.5fr;
   margin: 0 25px 20px 10px;
 }
 
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(18rem, 40%));
+  grid-template-columns: repeat(auto-fill, minmax(16rem, 40%));
   gap: 20px;
   margin: 10px 0;
   
@@ -166,7 +166,7 @@ button {
   display: grid;
   grid: 100px 20px / 150px;
   gap: 10px;
-  padding: 15px 10px;
+  padding: 15px 30px;
   box-shadow: var(--box-shadow);
   border-radius: var(--card-radius);
   border-left: solid 6px var(--card-color);
